<resources>
    <string name="app_name">Раки Сумы</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="buy_gradation_1">20г</string>
    <string name="buy_gradation_2">30г</string>
    <string name="buy_gradation_3">40г</string>
    <string name="buy_gradation_4">60г</string>

    <integer name="buy_gradation_price_1">160</integer>
    <integer name="buy_gradation_price_2">190</integer>
    <integer name="buy_gradation_price_3">220</integer>
    <integer name="buy_gradation_price_4">260</integer>

    <string name="order_name_basket">Корзина</string>

    <string name="order_value_name_1">Семечки, 20-30г.</string>
    <string name="order_value_name_2">Мелкие, 30-40г.</string>
    <string name="order_value_name_3">Средние, 40-60г.</string>
    <string name="order_value_name_4">Крупные, 60г.</string>

    <string name="currency">грн.</string>



    <string name="buy_textView_address">Введите адрес доставки:</string>
    <string name="buy_textView_addressAndFastDelivery">Дата, время и адрес доставки,\n
        или только дата, оператор свяжется с Вами для обсуждения деталей.</string>

    <string name="buy_name_of_methodSend">Метод отправки заявки</string>

    <string name="telephone_number">+380974654080</string>

    <string name="contacts_name1">Vodafone:</string>
    <string name="contacts_number1">+380974654080</string>
    <string name="contacts_name2">Kyivstar:</string>
    <string name="contacts_number2">+38555555555</string>
    <string name="contacts_name3">Email:</string>
    <string name="contacts_number3">
        <a href="default@urk.net\">default@ukr.net</a>
    </string>


    <string name="buy_method_of_send_SMS">SMS</string>
    <string name="buy_method_of_send_EMAIL">email</string>
    <string name="buy_nameOfButton">Подтвердить</string>
    <string name="buy_checkBox_fastDelivery">Доставить как можно быстрее?</string>
    <string name="buy_textView_nameOfAllWeight">Какой вес(кг)?</string>
    <string name="buy_textView_nameOfGradation">Выберите градацию:</string>
    <string name="cost_of_order">Общая стоимость</string>

    <string name="home_text1">Закажите прямо сейчас.</string>
    <string name="home_text3">Заказать</string>
    <string name="home_text_contacts">Контакты</string>
    <string name="home_text_about_us">О нас,\nпратнерам</string>

    <string name="buy_hint_inputPhone">Введите свой номер</string>
    <string name="DeleteFromOrderButton">Удалить</string>
    <string name="AddInOrderButton">В корзину</string>
</resources>
