<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="70dp"

        android:src="@drawable/lobster_and_letters"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/contacts_name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:text="@string/contacts_number1"
        android:autoLink="all"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="16sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:text="@string/contacts_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:text="@string/contacts_number2"
        android:autoLink="all"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="16sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:text="@string/contacts_name3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:text="@string/contacts_number3"
        android:autoLink="email"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="16sp"
        android:textColor="@color/colorText"/>

</LinearLayout>